--- a/topgrade.toml
+++ b/topgrade.toml
@@ -8,3 +8,4 @@ git_repos = [
 "pip" = "pip list -o --format freeze | cut -d '=' -f 1 | xargs pip install -U --upgrade-strategy eager"
 "pip3" = "pip3 list -o --format freeze | cut -d '=' -f 1 | xargs pip3 install -U --upgrade-strategy eager"
 "MS Update" = "/Library/Application\\ Support/Microsoft/MAU2.0/Microsoft\\ AutoUpdate.app/Contents/MacOS/msupdate --install"
+"krew" = "kubectl krew upgrade"
