--- a/topgrade.toml
+++ b/topgrade.toml
@@ -1,11 +1,12 @@
 git_repos = [
 ]
 
-[pre_commands]
+disable = ["packagemanagers","go"]
+
 
 [commands]
+"Homebrew" = "brew update && brew upgrade && brew cu -y && brew cleanup"
 "NPM" = "npm update -g"
-"pip" = "pip list -o --format freeze | cut -d '=' -f 1 | xargs pip install -U --upgrade-strategy eager"
-"pip3" = "pip3 list -o --format freeze | cut -d '=' -f 1 | xargs pip3 install -U --upgrade-strategy eager"
-"MS Update" = "/Library/Application\\ Support/Microsoft/MAU2.0/Microsoft\\ AutoUpdate.app/Contents/MacOS/msupdate --install"
 "krew" = "kubectl krew upgrade"
+"helm repos" = "helm repo update"
+"helm plugins" = "helm plugin list | sed 's/\\s.*$//' | tail -n +2 | xargs -n 1 helm plugin update"
